getGroup
